--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "~6.3.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
+    
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
@@ -45,6 +47,7 @@
             "Tests\\": "tests/"
         }
     },
+    
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
@@ -59,4 +62,5 @@
             "@php artisan key:generate --ansi"
         ]
     }
+    
 }
